2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/things-by-id-reversed/map.js:
	* python/mushin/command/main.py:
	* python/mushin/extern/paisley/couchdb.py:
	* python/mushin/model/couch.py:
	  Use the reversed id's for shortid, since couchdb 1.0.x changed
	  the uuid generation algorithm and it now generates a lot of common
	  prefixes.

2011-03-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/parse.py:
	  Fix the case for parsing 1W.
	* python/mushin/test/test_common_parse.py (added):
	  Add a test for it.

2011-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Add a 'delay' command to delay tasks.
	* python/mushin/common/format.py:
	  Add a formatTime method.
	* python/mushin/common/parse.py:
	  Extract method to parse a time spec.

2011-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	* python/mushin/command/conflict.py (added):
	* couchdb/views/conflict (added):
	* couchdb/views/conflict/map.js (added):
	  Add gtd conflict list, which at least shows the things that
	  currently are in conflict.

2011-01-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  Fix setting start date when adding a task.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/things.py:
	  Also list statutes in Things list.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/main.py:
	* python/mushin/maemo/start.py:
	  Add a New menu item to all menu's.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/start.py:
	  Load and show all thing info before populating, now that we don't
	  allow actually updating/adding until populated.

2011-01-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py: