@@ -1,5 +1,11 @@
 2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/command/replicate.py:
+	* python/mushin/command/thing.py:
+	  Use self.stdout.write instead of print for commands.
+
+2011-04-02  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* couchdb/views/things-by-id-reversed/map.js:
 	* python/mushin/command/main.py:
 	* python/mushin/extern/paisley/couchdb.py:
